[project]
name = "voice-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "google-genai>=1.64.0",
    "groq>=1.0.0",
    "ipykernel>=7.2.0",
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "twilio>=9.10.2",
    "uvicorn>=0.41.0",
    "websockets>=15.0.1",
]
